Nav on place page no longer has margin to align with content on top better

--- a/css/index.css
+++ b/css/index.css
@@ -1037,12 +1037,13 @@ p {
 .place-content .place-nav-sec .place-nav-button {
   cursor: pointer;
   padding: 10px;
+  margin: 0;
+  margin-top: 10px;
   border: 1px solid black;
 }
 @media (max-width: 600px) {
   .place-content .place-nav-sec .place-nav-button {
     padding: 15px 2%;
-    margin: 5px 0px;
     width: 100%;
     font-weight: regular;
     font-size: 4rem;
@@ -1072,7 +1073,7 @@ p {
 }
 .place-content .tab {
   margin: 20px 0px;
-  width: 100%;
+  width: 85%;
 }
 @media (max-width: 600px) {
   .place-content .tab {
