--- a/less/place.less
+++ b/less/place.less
@@ -15,10 +15,11 @@
         .place-nav-button {
             cursor: pointer;
             padding: 10px;
+            margin: 0;
+            margin-top: 10px;
             border: 1px solid black;
             @media(max-width:600px) {
                 padding: 15px 2%;
-                margin: 5px 0px;
                 width: 100%;
                 .font(regular,4rem,black,regular);            }
         }
@@ -40,7 +41,7 @@
     
         .tab {
             margin: 20px 0px;
-            width:100%;
+            width:85%;
             @media(max-width:600px) {
                 width: 100%;
             }
